# CCWC-C-version

./: .gitignore  CMakeLists.txt  README.md
include/: ccwc.h
src/: ccwc.cpp  main.cpp
